gccida/g2/init_stringpool
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_stringpool/src/stringpool.c:522:3: error: incomplete definition of type 'struct hash_table'
v0->alloc_node = alloc_node_0; 
~~^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_stringpool/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_stringpool/src/stringpool.c:522:18: error: use of undeclared identifier 'alloc_node_0'; did you mean 'alloc_node'?
v0->alloc_node = alloc_node_0; 
                 ^~~~~~~~~~~~
                 alloc_node
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_stringpool/src/stringpool.c:49:17: note: 'alloc_node' declared here
static hashnode alloc_node PARAMS ((hash_table *));
                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_stringpool/src/obj/stringpool.o] Error 1
